Form is complete, trying to get the media queries to work, but having issues aligning the label and the input on the same line.

--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,7 @@ h1 {
 ====================================*/
 
 .form {
-  display: flex;
-  flex-direction: column;
   margin-top: 3px;
-  border-top: 2px solid #2d3945;
   border-bottom: 2px solid #2d3945;
 }
 
@@ -135,9 +132,8 @@ input#zip {
 ====================================*/
 
 .newsletter {
-  display: flex;
-  flex-direction: column;
   color: #6e7d8d;
+  border-top: 2px solid #2d3945;
 }
 
 .ptop {
@@ -149,6 +145,7 @@ textarea {
 }
 
 .button {
+  width: 100%;
   height: 60px;
   background-color: #4ebbb5;
   color: #fff;
@@ -162,4 +159,13 @@ textarea {
 .footer {
   padding-top: 20px;
   text-align: center;
+}
+
+/*====================================
+        Media Queries
+====================================*/
+
+@media (min-width: 768px) {
+
+
 }
